--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-"node_modules/" 
-"dist/" 
-"build/" 
-".env" 
+# dependencies
+node_modules/
+apps/*/node_modules/
+
+# build outputs
+dist/
+build/
+apps/*/dist/
+apps/*/build/
+
+# env files
+.env
+apps/*/.env
+
+# misc
+.DS_Store
