--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "openai": "^5.15.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zod-validation-error": "^4.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
