--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "rootDir": "src",
-    "outDir": "dist",
-    "esModuleInterop": true,
-    "strict": true
-  }
+    "module": "CommonJS",               
+    "rootDir": "src",                   
+    "outDir": "dist",                   
+    "esModuleInterop": true,            
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
